--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint:next": "next lint",
+    "lint:sol": "solhint 'src/**/*.sol'",
     "test": "jest --watch"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "eslint-config-next": "12.0.7",
     "jest": "^27.4.7",
     "postcss": "^8.4.5",
+    "solhint": "^3.3.6",
     "tailwindcss": "^3.0.12",
     "typescript": "4.5.4"
   }
